<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screen.signup.SignupActivity">

    <TextView
        android:id="@+id/signup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xxl"
        android:text="@string/signup_title"
        android:textSize="@dimen/font_size_xxl"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_username"
        android:layout_width="@dimen/button_width_l"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xxl"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/username_hint"
        android:textSize="@dimen/font_size_m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_title" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="@dimen/button_width_l"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_s"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:textSize="@dimen/font_size_m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_username" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="@dimen/button_width_l"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_s"
        android:text="@string/btn_signup_text"
        android:textSize="@dimen/font_size_m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup">

        <TextView
            android:id="@+id/to_login_from_signup_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_s"
            android:text="@string/to_login_from_signup_first"
            android:textSize="@dimen/font_size_s"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_signup" />

        <TextView
            android:id="@+id/to_login_from_signup_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_s"
            android:text="@string/to_login_from_signup_second"
            android:textSize="@dimen/font_size_s"
            android:textColor="@color/blue"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_signup" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

