<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xxl"
        android:text="@string/login_title"
        android:textSize="@dimen/font_size_xxl"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_login"
        android:layout_width="@dimen/button_width_l"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xxl"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/login_hint"
        android:textSize="@dimen/font_size_m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="@dimen/button_width_l"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_s"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:textSize="@dimen/font_size_m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_login" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/button_width_l"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_s"
        android:text="@string/btn_login_text"
        android:textSize="@dimen/font_size_m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password" />

</androidx.constraintlayout.widget.ConstraintLayout>